syntax = "proto3";

package message;

// 验证服务
service VarifyService {
  rpc GetVarifyCode (GetVarifyReq) returns (GetVarifyRsp) {} // 获取验证码接口
}

// 获取验证码请求
message GetVarifyReq {
  string email = 1;
}

// 获取验证码响应
message GetVarifyRsp {
  int32 error = 1;
  string email = 2;
  string code = 3;
}

// 状态服务
service StatusService {
    rpc GetChatServer (GetChatServerReq) returns (GetChatServerRsp) {} // 获取聊天服务器
    rpc Login (LoginReq) returns (LoginRsp) {} // 登录
}

// 获取聊天服务器请求
message GetChatServerReq {
  int32 uid = 1;
}

// 获取聊天服务器响应
message GetChatServerRsp {
  int32 error = 1;
  string host = 2;
  string port = 3;
  string token = 4;
}

// 登录请求
message LoginReq {
  int32 uid = 1;
  string token = 2;
}

// 登录响应
message LoginRsp {
  int32 error = 1;
  int32 uid = 2;
  string token = 3;
}

